# kirigami-kee

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt
src/: CMakeLists.txt  backend.cpp  backend.h  command.cpp  command.h  credit.cpp  credit.h  db.cpp  db.h  debug.cpp  debug.h  digest.h  endian.h  err.h  export.cpp  export.h  gpg.cpp  gpg.h  hex.h  item.h  main.cpp  qr.c  qr.h  resources.qrc  rpc.cpp  rpc.h  settings.cpp  settings.h  transport.c  transport.h
src/contents/ui/: main.qml
src/tests/: CMakeLists.txt  test_credit.cpp  test_db.cpp  test_export.cpp  test_gpg.cpp  test_gpg_nokey.cpp  test_gpg_sym.cpp  test_rpc.cpp  test_rpc.h  test_transport.cpp  testdata.py  testutil.c  testutil.h
