find_package(PkgConfig)
pkg_check_modules(GRAPHICSMAGICK REQUIRED GraphicsMagick)
add_library(utils hex.c)
set_property(TARGET utils PROPERTY C_VISIBILITY_PRESET default)
set_property(TARGET utils PROPERTY VISIBILITY_INLINES_HIDDEN OFF)
add_executable(credittracker main.cpp backend.cpp settings.cpp gpg.cpp digest.c debug.cpp credit.cpp export.cpp db.cpp endian.c rpc.cpp transport.c qr.c resources.qrc)
target_compile_options(credittracker PUBLIC -fexceptions)
target_include_directories(credittracker PRIVATE ${GRAPHICSMAGICK_INCLUDE_DIRS})
target_link_libraries(credittracker Qt5::Quick Qt5::Qml Qt5::Gui Qt5::QuickControls2 Qt5::Widgets KF5::Kirigami2 KF5::I18n gcrypt lmdb z b64 qrencode zbar ${GRAPHICSMAGICK_LIBRARIES})
target_link_libraries(credittracker utils)
target_link_libraries(credittracker varint)

add_subdirectory(tests)
