add_library(testutils testutil.c)
set_property(TARGET testutils PROPERTY C_VISIBILITY_PRESET visible)
set_property(TARGET testutils PROPERTY VISIBILITY_INLINES_HIDDEN OFF)
add_executable(test_gpg test_gpg.cpp ../gpg.cpp ../term_debug.c)
add_executable(test_gpg_nokey test_gpg_nokey.cpp ../gpg.cpp ../term_debug.c)
add_executable(test_gpg_sym test_gpg_sym.cpp ../gpg.cpp ../term_debug.c)
add_executable(test_export test_export.cpp ../export.cpp ../term_debug.c)
add_executable(test_db test_db.cpp ../db.cpp ../term_debug.c)
target_link_libraries(test_gpg gcrypt utils)
target_link_libraries(test_gpg_nokey gcrypt utils)
target_link_libraries(test_gpg_sym gcrypt utils testutils)
target_link_libraries(test_export varint testutils Qt5::Core)
target_link_libraries(test_db testutils gcrypt lmdb)
target_include_directories(test_gpg PRIVATE ..)
target_include_directories(test_gpg_nokey PRIVATE ..)
target_include_directories(test_gpg_sym PRIVATE .. .)
target_include_directories(test_export PRIVATE .. .)
target_include_directories(test_db PRIVATE .. .)
add_test(NAME gpg COMMAND test_gpg)
add_test(NAME gpg_nokey COMMAND test_gpg_nokey)
add_test(NAME gpg_sym COMMAND test_gpg_sym)
add_test(NAME export COMMAND test_export)
add_test(NAME db COMMAND test_db)
target_compile_options(test_db PUBLIC -fexceptions)
configure_file(key.bin ${CMAKE_CURRENT_BINARY_DIR}/key.bin COPYONLY)
